<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_ref_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.restaurants.ListActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_restaurant_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="35dp"
            />

        <TextView
            android:id="@+id/tv_info"
            style="@style/InfoTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:text="@string/info_tap_to_retry"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/info_view_bg"
            android:gravity="center|start"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textColor="#767676"
            android:textSize="13sp"
            tools:text="88 restaurants" />
    </FrameLayout>
</android.support.v4.widget.SwipeRefreshLayout>
